@@ -1,0 +1,26 @@
+<!DOCTYPE busconfig PUBLIC
+ "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
+ "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+<busconfig>
+
+  <!-- Allow nx user to manage sessions -->
+  <policy user="nx">
+    <allow own="org.freedesktop.ConsoleKit"/>
+
+    <allow send_interface="org.freedesktop.ConsoleKit.Manager"/>
+    <allow send_interface="org.freedesktop.ConsoleKit.Seat"/>
+    <allow send_interface="org.freedesktop.ConsoleKit.Session"/>
+
+    <deny send_interface="org.freedesktop.ConsoleKit.Manager"
+           send_member="SetX11ParkingPlace"/>
+    <allow send_interface="org.freedesktop.ConsoleKit.Manager"
+           send_member="OpenConsoleWithParameters"/>
+    <allow send_interface="org.freedesktop.ConsoleKit.Session"
+           send_member="Lock"/>
+    <allow send_interface="org.freedesktop.ConsoleKit.Session"
+           send_member="Unlock"/>
+    <allow send_destination="org.freedesktop.ConsoleKit"
+           send_interface="org.freedesktop.DBus.Properties" />
+  </policy>
+
+</busconfig>
